lib/bait/tests/inout_error/is_private.in.bt
import bait.tests.packages.pubpriv

struct UsesPriv{
	ps pubpriv.PrivStruct
	pa pubpriv.PrivAlias
}

s := pubpriv.PrivStruct{}

e := pubpriv.PrivEnum.a

c := pubpriv.PRIV_CONST

pubpriv.priv_fun()

s2 := pubpriv.PubStruct{}
s2.priv_method()


// TODO test Bait-interfaces, once they are implemented
